[package]
name = "mountpoint-s3-macros"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Procedural macros for internal use by Mountpoint for Amazon S3."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0.16", features = ["extra-traits", "full"] }